Excel done, Conclusion done, Closing floor done, EmploeesInformation Entity created